public/assets/css/master.css
/* Reset */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {display:block;}
body{line-height:1;}
ol,ul{list-style:none;}
blockquote,q{quotes:none;}
blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
table{border-collapse:collapse;border-spacing:0;}

/* Default Styles */
html {height:100%;}
body {height:100%; /*font-family: 'Open Sans', sans-serif;*/ font-family: 'Roboto', sans-serif;}
.bodyWrap {min-height:100%; position:relative; }
::selection {background:rgba(244, 67, 54, 0.3);}
.wrap {width:960px; margin:auto;}
.clear {clear:both;}
.beforeFooter {padding-bottom:220px; clear:both;}
a {text-decoration:none;}

/* Typography */
h1 {font-size:30px; line-height:50px; color:#fff; font-weight:500; float:left;}
h2 {color:#F44336; font-weight:700; font-size:30px; padding:25px 0 30px 0;}
h2 a {color:#F44336;}
h3 {font-size:20px; line-height:40px; color:#fff; font-weight:500; padding-top:15px; padding-left:20px;}
p  {font-size:16px; margin-bottom:20px; line-height:23px;}

/* Header */
header{width:100%; min-width:960px; position:fixed; top:0; z-index:999999; height:70px; background:#fff;}
header .logo {float:left; width:70px; margin-left:13px;}
header nav {float:right;}
header nav ul {margin-top:25px; margin-right:12px;}
header nav ul li {font-size:18px; float:left; line-height:40px; box-sizing:border-box; text-transform:uppercase;}
header nav ul li:hover {border-bottom:5px solid #F44336;}
header nav ul li.here {}
header nav ul li a {color:#F44336; padding:0 13px; display:block;}

/* Side Navigation */
.sideNav {width:60px; height:60px; cursor:pointer; float:left; text-align:center; margin-top:5px; margin-left:12px;}
.sideNav .material-icons {font-size:24px; color:#F44336; line-height:60px;}
aside {position:fixed; overflow:scroll; width:240px; height:100%; z-index:99999999; background-color:#fff; box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -moz-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); left:-270px; transition:.3s ease;}
aside::-webkit-scrollbar {width:0 !important}
aside {-ms-overflow-style:none;}
aside {overflow:-moz-scrollbars-none;}
aside nav {padding:12px 0;}
aside nav ul {}
aside nav ul li {padding:18px 0 17px 24px; cursor:pointer; color:#424242; font-size:16px; font-weight:700;}
aside nav ul li a {color:#424242;}
aside nav ul li ul {margin-top:13px; display:none;}
aside nav ul li ul li:last-child {padding-bottom:0;}
aside .logo {width:240px; height:70px; text-align:center; border-bottom:1px solid #e0e0e0;}
aside .logo img {width:70px;}
.pageCover {display:none; width:100%; min-width:960px; height:100%; min-width:100%; min-height:100%; position:absolute; top:0; left:0; background-color:rgba(0, 0, 0, .4); z-index:9999999;}
.slideIn {left:0; transition:.3s ease;}
.overflow {overflow:hidden;}

/* Body */
section.page-title {width:100%; min-width:960px; height:50px; background-color:#F44336; position:fixed; top:70px; left:0; box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -moz-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); z-index:999999;}
section.top {margin-top:140px; margin-bottom:20px; float:left; width:100%;}

/* Deal */
.deal {width:100%; height:300px; float:left; box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -moz-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); margin:20px 0; position:relative;}
.googleMap {width:300px; height:300px; float:left;}
.info {margin-left:25px; float:left; width:600px;}
.contactButton { z-index:999; cursor:pointer; text-align:center; position:absolute; right:-15px; top:-15px;}
.contactButton span.btnSpan {transition:.4s ease;}
.contact {width:0px; transition:.4s ease; overflow:hidden; background:#e0e0e0; height:300px; position:absolute; right:0; top:0; box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2);}
.rotate {transition:.4s ease; transform:rotate(135deg);}
.contact h3 {width:260px; color:#424242;}
.contact ul {padding:20px; width:260px;}
.contact li {color:#424242; font-weight:500px; line-height:25px; font-size:16px;}
.contact li i.material-icons {float:left; padding-right:10px;}
.contact li.city {margin-left:35px;}
span.btnSpan {display:block;}

/* Restaurants */
.pageList li {width:100%; height:auto; margin-bottom:20px; background-color:#fff; box-sizing:border-box; font-size:20px; line-height:30px; box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -moz-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);}
.pageList li a {color:#424242; display:block; padding:10px 20px;}
.pageList li:hover {background-color:#e0e0e0;}

/* Social Media Icons */
.social {float:right;}
.social .circle {width:40px; height:40px; background-color:rgba(256, 256, 256, 1); border-radius:40px; float:left; margin-top:5px; line-height:43px; text-align:center; font-size:25px; margin-left:5px;}
.social .circle a {color:#f44336; display:block;}
.social .circle a:hover {color:rgb(68,138,255);}

/* Get Directions */
.getDirections {padding:0 20px; line-height:30px; margin-bottom:10px;}
.getDirections i.material-icons {float:left; line-height:30px; padding-right:10px;}

/* Drawer Animation */
.open {width:300px; transition:.4s ease;}

/* Display */
.none {display:none;}
.block {display:block;}

/* Desktop/Mobile */
.desktop {display:block;}
.mobile {display:none;}

/* Footer */
footer {position:absolute; bottom:0; width:100%; min-width:960px; height:220px; background-color:#e0e0e0;}
footer .logo {width:70px; margin:auto; margin-top:20px;}
footer span {font-size:16px; color:#424242; display:block; text-align:center;}
footer .copyright {position:absolute; bottom:0; left:0; width:100%; min-width:960px; height:30px; background-color:#424242;}
footer .copyright span {color:#fff; font-size:10px; display:block; text-align:center; line-height:30px;}
footer span.disclaimer {font-size:12px; margin-top:10px; line-height:14px;}

/* Min-Width 1500px */
@media screen and (min-width:1500px){
	aside {left:0;}
}

/* Max-Width 960px */
@media screen and (max-width:960px) {
	.desktop {display:none;}
	.mobile {display:block;}
	.wrap {width:100%;}
	img {max-width:100%;}
	.social {margin-right:5%;}
	h1 {margin-left:5%;}
	section.top .wrap {width:90%; margin:0 5%;}
	.deal {height:auto; margin:10px 0; overflow:hidden;}
	.contact {position:relative; height:auto; width:100%; display:block !important; box-shadow:none;}
	.googleMap, .mdl-button--fab.mdl-button--colored, header nav {display:none;}
	.info {margin-left:0; margin:0 5%; width:auto;}
	header, footer, footer .copyright, section.page-title {min-width:100%;}
	.beforeFooter {display:none;}
	footer {height:auto; position:relative; clear:both;}
	footer span.disclaimer {width:90%; margin:10px 5%; padding-bottom:50px; margin-bottom:0;}
}

